# ethereal-waves

./: Cargo.toml  README.md  justfile
i18n/en/: ethereal_waves.ftl
resources/: app.desktop  app.metainfo.xml
src/: app.rs  config.rs  footer.rs  image_store.rs  key_bind.rs  library.rs  main.rs  menu.rs  mpris.rs  player.rs  playlist.rs
src/page/: empty_library.rs  list_view.rs  loading.rs  mod.rs
