[package]
name = "ethereal-waves"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
description = "Ethereal Waves"
repository = "https://github.com/LotusPetal392/ethereal-waves"

[dependencies]
futures-util = "0.3.31"
i18n-embed = { version = "0.16", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.10"
log = "0.4.28"
open = "5.3.2"
paste = "1.0.15"
rust-embed = "8.8.0"
serde = "1.0.228"
tokio = { version = "1.48.0", features = ["full"] }
urlencoding = "2.1.3"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
    # Accessibility support
    "a11y",
    # About widget for the app
    "about",
    # Uses cosmic-settings-daemon to watch for config file changes
    "dbus-config",
    # Support creating additional application windows.
    "multi-window",
    # On app startup, focuses an existing instance if the app is already open
    "single-instance",
    # Uses tokio as the executor for the runtime
    "tokio",
    # Windowing support for X11, Windows, Mac, & Redox
    "winit",
    # Add Wayland support to winit
    "wayland",
    # GPU-accelerated rendering
    "wgpu",
]

[features]
default = ["xdg-portal", "single-instance", "a11y"]
a11y = ["libcosmic/a11y"]
rfd = ["libcosmic/rfd"]
xdg-portal = ["libcosmic/xdg-portal"]
single-instance = ["libcosmic/single-instance"]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
